--- a/build.xml
+++ b/build.xml
@@ -23,24 +23,21 @@
 	</target>
 	
 	<target name="checkstyle">
-		<checkstyle config="sun_checks.xml">
+		<checkstyle config="sun_checks.xml" failOnViolation="false">
 			<fileset dir="src/example" includes="**/*.java"/>
 			<formatter type="xml" toFile="checkstyle_errors.xml"/>
 		</checkstyle>
 	</target>
 	
-	<target name="junit">
+	<target name="junit" depends="compile">
 		 <junit printsummary="yes" haltonfailure="yes">
 			<classpath>
 				<pathelement location="build/classes"/>
 				<pathelement path="WebContent/WEB-INF/lib/junit.jar"/>
 				<pathelement path="WebContent/WEB-INF/lib/org.hamcrest.core_1.3.0.v201303031735.jar"/>
 			</classpath>
-
-			<formatter type="plain"/>
-
-				<test name="junit.TestCalculator" haltonfailure="no" outfile="TestCalculator_JUnitresult.txt">
-					<formatter type="plain"/>
+				<test name="junit.TestCalculator" haltonfailure="no" outfile="TestCalculator_JUnitresult">
+					<formatter type="xml"/>
 				</test>
 			</junit>
 	
